feat: :art: new hydrometer routes
