# server/src/docs/swagger.json
@@ -931,7 +931,7 @@
       }
     },
     "/user-hydrometers/{id}": {
-      "patch": {
+      "post": {
         "summary": "Associar Usuário ao Hidrômetro",
         "description": "Essa rota é responsável por associar o usuário à um hidrômetro",
         "tags": ["Hidrômetros do Usuário"],
@@ -955,13 +955,135 @@
                 "$ref": "#/components/schemas/AssociateUserToHydrometer"
               },
               "examples": {
-                "startAssociationPayload": {
+                "hydrometerAssociation": {
                   "value": {
-                    "name": "North Hydrometer",
                     "password": "hydrometerpass123"
                   }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "integer",
+                      "format": "int64"
+                    },
+                    "address_id": {
+                      "type": "string",
+                      "format": "uuid"
+                    },
+                    "user_id": {
+                      "type": "string",
+                      "format": "uuid"
+                    },
+                    "name": {
+                      "type": "string"
+                    },
+                    "consumption_category": {
+                      "type": "string",
+                      "enum": [
+                        "EMPTY",
+                        "COMMERCIAL_SOCIAL_ASSISTANCE",
+                        "COMMERCIAL_NORMAL",
+                        "INDUSTRIAL_NORMAL",
+                        "PUBLIC_WITH_PROGRAM_AGREEMENT",
+                        "PUBLIC_WITH_CONTRACT_PURE",
+                        "PUBLIC_NORMAL",
+                        "RESIDENTIAL_NORMAL",
+                        "RESIDENTIAL_SOCIAL",
+                        "RESIDENTIAL_VULNERABLE_NORMAL"
+                      ]
+                    },
+                    "share_consumption": {
+                      "type": "boolean"
+                    },
+                    "created_at": {
+                      "type": "string",
+                      "format": "date-time"
+                    },
+                    "updated_at": {
+                      "type": "string",
+                      "format": "date-time"
+                    }
+                  }
                 },
-                "completeAssociationPayload": {
+                "examples": {
+                  "response": {
+                    "value": {
+                      "id": 1,
+                      "address_id": null,
+                      "user_id": "3fa85f64-5717-4562-b3fc-2c963f66afa6",
+                      "name": "HIDRÔMETRO",
+                      "consumption_category": "EMPTY",
+                      "share_consumption": false,
+                      "created_at": "2023-01-01T23:59:59.999Z",
+                      "updated_at": "2023-01-01T23:59:59.999Z"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized - Invalid token! - Invalid credentials!"
+          },
+          "403": {
+            "description": "Forbidden - The hydrometer is associated with another user!"
+          },
+          "404": {
+            "description": "Not Found - Token not found! - User not found!"
+          }
+        }
+      },
+      "patch": {
+        "summary": "Atualizar o Hidrômetro do Usuário",
+        "description": "Essa rota é responsável por atualizar os dados do hidrômetro de um usuário",
+        "tags": ["Hidrômetros do Usuário"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID do hidrômetro",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateUserHydrometer"
+              },
+              "examples": {
+                "hydrometerWithNewAddress": {
+                  "value": {
+                    "name": "North Hydrometer",
+                    "password": "hydrometerpass123",
+                    "consumption_category": "RESIDENTIAL_NORMAL",
+                    "share_consumption": true,
+                    "address": {
+                      "postal_code": "00000-000",
+                      "street": "R. Jhon Doe",
+                      "number": 100,
+                      "neighborhood": "Jd. Jane",
+                      "city": "Doe Town",
+                      "state": "ZZ"
+                    }
+                  }
+                },
+                "hydrometerWithAddressAlreadyExists": {
                   "value": {
                     "name": "North Hydrometer",
                     "password": "hydrometerpass123",
@@ -1638,6 +1760,14 @@
         }
       },
       "AssociateUserToHydrometer": {
+        "type": "object",
+        "properties": {
+          "password": {
+            "type": "string"
+          }
+        }
+      },
+      "UpdateUserHydrometer": {
         "type": "object",
         "properties": {
           "name": {
