# server/src/modules/hydrometers/useCases/updateUserHydrometer/UpdateUserHydrometerUseCase.ts
@@ -6,10 +6,32 @@ import { IUsersRepository } from '@modules/users/repositories/IUsersRepository';
 import { AppError } from '@shared/errors/AppError';
 import { HTTP_STATUS_CODE } from '@utils/constants';
 
+type ConsumptionCategory = 'EMPTY'
+  | 'COMMERCIAL_SOCIAL_ASSISTANCE'
+  | 'COMMERCIAL_NORMAL'
+  | 'INDUSTRIAL_NORMAL'
+  | 'PUBLIC_WITH_PROGRAM_AGREEMENT'
+  | 'PUBLIC_WITH_CONTRACT_PURE'
+  | 'PUBLIC_NORMAL'
+  | 'RESIDENTIAL_NORMAL'
+  | 'RESIDENTIAL_SOCIAL'
+  | 'RESIDENTIAL_VULNERABLE_NORMAL'
+
 interface IUseCaseProps {
   id: number
-  password: string
   user_id: string
+  name: string
+  password: string
+  share_consumption?: boolean
+  consumption_category?: ConsumptionCategory
+  address?: {
+    postal_code: string
+    street: string
+    number?: string
+    neighborhood: string
+    city: string
+    state: string
+  }
 }
 
 const USER_NOT_FOUND_ERROR = 'User not found!'
@@ -17,7 +39,7 @@ const INVALID_CREDENTIALS_ERROR = 'Invalid credentials!'
 const HYDROMETER_IS_ASSOCIATED_WITH_ANOTHER_USER = 'The hydrometer is associated with another user!'
 
 @injectable()
-export class AssociateHydrometerToUserUseCase {
+export class UpdateUserHydrometerUseCase {
   constructor (
     @inject('UsersRepository')
     private usersRepository: IUsersRepository,
@@ -31,28 +53,32 @@ export class AssociateHydrometerToUserUseCase {
 
   public async execute({
     id,
-    password,
     user_id,
+    name,
+    password,
+    share_consumption,
+    consumption_category,
+    address,
   }: IUseCaseProps) {
-    const userToAssociate = await this.usersRepository.findById(user_id)
+    const userOfAssociation = await this.usersRepository.findById(user_id)
 
-    if (!userToAssociate) {
+    if (!userOfAssociation) {
       throw new AppError(USER_NOT_FOUND_ERROR, HTTP_STATUS_CODE.NOT_FOUND)
     }
 
-    const hydrometerToAssociate = await this.hydrometersRepository.findById(id)
+    const hydrometerToUpdate = await this.hydrometersRepository.findById(id)
 
-    if (!hydrometerToAssociate) {
+    if (!hydrometerToUpdate) {
       throw new AppError(INVALID_CREDENTIALS_ERROR, HTTP_STATUS_CODE.UNAUTHORIZED)
     }
 
-    if (hydrometerToAssociate.user_id && hydrometerToAssociate.user_id !== userToAssociate.id) {
+    if (hydrometerToUpdate.user_id && hydrometerToUpdate.user_id !== userOfAssociation.id) {
       throw new AppError(HYDROMETER_IS_ASSOCIATED_WITH_ANOTHER_USER, HTTP_STATUS_CODE.FORBIDDEN)
     }
 
     const hydrometerPasswordMatch = await this.hashProvider.compareHash(
       password,
-      hydrometerToAssociate.password
+      hydrometerToUpdate.password
     )
 
     if (!hydrometerPasswordMatch) {
@@ -60,8 +86,12 @@ export class AssociateHydrometerToUserUseCase {
     }
 
     const updatedHydrometer = await this.hydrometersRepository.update({
-      id: hydrometerToAssociate.id,
+      id: hydrometerToUpdate.id,
       user_id,
+      name: name,
+      share_consumption,
+      consumption_category,
+      address,
     })
 
     return updatedHydrometer
